		current($this-&gt;_array); -
		harmoni/core/oki2/repository/HarmoniRecord.class.php - getParts() Moved the
		following line out of the if-statement: $activeValue =
		$allRecordFieldValues[$key]-&gt;getActiveVersion(); -
		harmoni/core/oki2/hierarchy/tree/Tree.class.php - _traverse() Kept the first
		parameter being passed by reference. Needed in this case.
		(Adam Franco)
		
		
	* Change: 
		DBC: Updating the Database Handler to throw from an exception hierarchy as
		well as use PHP5 interfaces.
		(2007-09-05 - Adam Franco)
		
	* Change: 
		
		Errors:Expunging the old harmoni error handler now that we have exceptions.
		(2007-09-05 - Adam Franco)
		
	* Bug Fix: 
		
		Hierarchy: Now properly clones the query object in PHP5.
		(Adam Franco)
		
	* Change: 
		
		GUI: Now can include an xmlns namespace in the &lt;html&gt; tag.
		(Adam Franco)
		
	* Change: 
		
		Id: Id can now be transparently cast as a string.
		(Adam Franco)
		
	* Change: 
		Updating the Agent Package to use PHP5 interfaces to allow for
		type-checking. 
		(Adam Franco)
		
	* New feature: 
		Authentication: Adding methods to access a single current Agent. OSID v3
		will specify a single agent authenticated at each time, rather than our
		current multiple case. The methods added are to enable working in that sort
		of paradigm, though they do not map directly to the v3 methods.
		(Adam Franco)
		
	* Bug Fix: 
		
		DBHandler: Adding Support for table.column column-syntax.
		(Adam Franco)
		
	* Bug Fix: 
		Repository: Creation date is now added properly when Assets are created,
		instead of on the first modification.
		(Adam Franco)
		
	* New feature: 
		
		Repository: Assets can now store and retrieve the id of their creator.
		(Adam Franco)
		
	* New feature: 
		HarmoniIterator now supports the add($item) method to allow incremental
		addition of items to the iterator.
		(Adam Franco)
		
	* Bug Fix: 
		Converting all short tags (&lt;?) to the full tags (&lt;?php) for compatibility