@@ -5,7 +5,7 @@
  * @copyright Copyright &copy; 2005, Middlebury College
  * @license http://www.gnu.org/copyleft/gpl.html GNU General Public License (GPL)
  *
- * @version $Id: BasicOutputHandlerConfigProperties.class.php,v 1.5 2007/09/04 20:25:30 adamfranco Exp $
+ * @version $Id: BasicOutputHandlerConfigProperties.class.php,v 1.6 2007/09/07 17:25:06 adamfranco Exp $
  */
 
 require_once(OKI2."/osid/shared/Properties.php");
@@ -28,7 +28,7 @@ require_once(HARMONI."oki2/shared/ConfigurationPropertiesType.class.php");
  * @copyright Copyright &copy; 2005, Middlebury College
  * @license http://www.gnu.org/copyleft/gpl.html GNU General Public License (GPL)
  *
- * @version $Id: BasicOutputHandlerConfigProperties.class.php,v 1.5 2007/09/04 20:25:30 adamfranco Exp $
+ * @version $Id: BasicOutputHandlerConfigProperties.class.php,v 1.6 2007/09/07 17:25:06 adamfranco Exp $
  */
 class BasicOutputHandlerConfigProperties
 	extends Properties
@@ -93,6 +93,9 @@ class BasicOutputHandlerConfigProperties
 	 * @access public
 	 */
 	function getProperty ( $key ) { 
+		if (!isset($this->_properties[serialize($key)]))
+			return null;
+		
 		return $this->_properties[serialize($key)];
 	}
 
