@@ -55,6 +55,9 @@
 							Kept the first parameter being passed by reference. Needed in this case.
 		 (<em>Adam Franco</em>)</li>
 		
+		<li> Bug Fix:  
+			OutputHandler: fixing notices.
+		 (<em>2007-09-07 - Adam Franco</em>)</li>
 		<li> Change:  
 			DBC: Updating the Database Handler to throw from an exception hierarchy
 			as well as use PHP5 interfaces.
